Z-index fixed for home images

--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,6 @@ body{
   padding: 0;
 }
 
-body.no-scroll{
-  overflow: hidden;
-}
-
 a{
   text-decoration: none;
   font-size: 20px;
@@ -459,7 +455,10 @@ li:nth-child(-n +3) a{
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  z-index: 1;
+}
+
+.gif.mobile .image{
+  z-index: -1;
 }
 
 .gif-text.mobile.touched{
